{
    "name": "GameInput",
    "maps": [
        {
            "name": "InGameMobile",
            "id": "0fe34d2d-082b-4b15-bc93-c2237d6b1a29",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "96297f86-fac8-47e2-9393-26fd6ec3bbc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58ed52a4-2547-4467-97c8-c2a17882284d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGameEditor",
            "id": "c71f3092-6f2d-4949-a6bd-029f10a4db24",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a86de3fe-8270-4741-981b-db4df17a1c71",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "3339f17d-4799-4e71-8004-c67e30249d83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "932bfb3c-c77f-4811-a8d4-3d54bfc913f4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "21520edc-6472-49bc-bde2-eac2af22493d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0110a0e0-af0c-4fc7-9727-0b55672a7aea",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cd9b7f32-8b20-42fc-a99b-887139f423a6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f2acfd69-fbc4-4b67-9ed2-20c72053a23c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0888d24e-a558-430e-9799-fe1d6ac403c4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}